<resources>
    <!-- BETA MESSAGE-->
    <string name="beta">Thank you for participating in the beta tests for this app. This page is not yet complete, please come back at a later update to try it out.</string>
    <!--Tutorial Strings-->
    <string name="welcome">Welcome to Study!</string>
    <string name="explain">This app prevents kids from being distracted by their phones by requiring that they answer study questions before using their apps.</string>
    <string name="scroll">Scroll below to explore the app\'s functionality.</string>
    <string name="topic_tutorial_header">The Topics Page</string>
    <string name="explain_topic">The topics page is where you can view and edit your current topics of study.</string>
    <string name="explain_topic_2">You can use built in study topics or create your own. Go here first to choose your topics of study.</string>
    <string name="app_settings_tutorial_header">The App Settings Page</string>
    <string name="explain_app_settings">The app settings page is where you can control access to the other pages of the app.</string>
    <string name="explain_app_settings_2">Here, you can set a password that is required to access the app.</string>
    <string name="question_settings_tutorial_header">The Question Settings Page</string>
    <string name="explain_question_settings">The question settings page contains settings for unlock requirements.</string>
    <string name="explain_question_settings_2">You can set when to lock the phone and requirements for unlocking on this page.</string>
    <string name="tutorial_shown">Tutorial Shown</string>
    <string name="close_tutorial">Close Tutorial</string>
    <!--General and Homepage Strings-->
    <string name="app_name">Study!</string>
    <string name="topic">Topics</string>
    <string name="progress">Progress</string>
    <string name="app_settings">App Settings</string>
    <string name="question_settings">Question Settings</string>
    <string name="center_click">Please select one of the four navigation options.</string>
    <string name="pref">My Preferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="display_time">Display Time</string>
    <string name="new_line_text">%1$s\n</string>

    <!--Strings for topics page-->
    <string name="topic_empty_state_header">Here is where you can view all of your study topics!</string>
    <string name="topic_empty_state_add_topics_hint">You currently have no topics to study. Add some below!</string>
    <string name="custom_questions">Create Custom Question Set</string>
    <string name="submit">Submit</string>
    <string name="question">Question/Definition</string>
    <string name="question_hint">Question/Definition Here</string>
    <string name="answer_to_term">Answer/Term</string>
    <string name="answer_hint">Answer/Term Here</string>
    <string name="add_term">Add Term</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="custom_q_set">Custom Question Set</string>
    <string name="term_empty_state_header">Create custom question sets</string>
    <string name="term_empty_state_hint">Use the plus button to create question/answer pairs.</string>
    <!--Strings for study questions page-->
    <string name="raw_number">%1$d</string>
    <string name="last_answer">The answer to the last question was %1$s</string>
    <string name="answer_the_following">Answer the following questions to continue accessing this app.</string>
    <string name="cont">Check Answer</string>
    <string name="zero">0</string>
    <string name="streak">Streak:</string>
    <string name="attempted">Attempted:</string>
    <string name="correct">Correct:</string>
    <string name="answer">Answer:</string>
    <string name="answer_here">Type your answer here</string>


    <!-- Strings related to Settings -->
    <string name="question_requirements">Question Requirements</string>
    <string name="when_to_ask">When To Ask Questions</string>
    <string name="primary_req_type">Primary Requirement Type</string>
    <string name="secondary_req_type">Secondary Requirement Type</string>
    <string name="primary_req">Primary Requirements</string>
    <string name="secondary_req">Secondary Requirements</string>
    <string name="unlock_dur">Unlock Duration</string>
    <string name="req_correct"># Correct</string>
    <string name="req_attempted"># Attempted</string>
    <string name="req_streak"># Correct In-A-Row</string>
    <!-- Unlock Times Arrays-->
    <string-array name="pref_unlock_dur_titles">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
    </string-array>
    <string-array name="pref_unlock_dur_values">
        <item>600000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>10800000</item>
    </string-array>
    <!-- Requirement Arrays-->
    <string-array name="pref_req_types">
        <item>@string/req_attempted</item>
        <item>@string/req_correct</item>
        <item>@string/req_streak</item>
    </string-array>

    <string-array name="pref_req_types_none">
        <item>@string/req_attempted</item>
        <item>@string/req_correct</item>
        <item>@string/req_streak</item>
        <item>None</item>
    </string-array>

    <string-array name="pref_reqs_attempted">
        <item>1 Attempted</item>
        <item>2 Attempted</item>
        <item>3 Attempted</item>
        <item>4 Attempted</item>
        <item>5 Attempted</item>
    </string-array>

    <string-array name="pref_reqs_correct">
        <item>1 Correct</item>
        <item>2 Correct</item>
        <item>3 Correct</item>
        <item>4 Correct</item>
        <item>5 Correct</item>
    </string-array>

    <string-array name="pref_reqs_streak">
        <item>1 In-A-Row</item>
        <item>2 In-A-Row</item>
        <item>3 In-A-Row</item>
        <item>4 In-A-Row</item>
        <item>5 In-A-Row</item>
    </string-array>

    <string-array name="pref_reqs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!--App Settings-->

    <string name="require_pin">Require Passcode To Access App Pages</string>
    <string name="pin">Passcode</string>
    <string name="no_passcode">No Passcode Set</string>
    <string name="edit_passcode">Edit Passcode</string>
    <string name="save_passcode">Save Passcode</string>
    <string name="security">Security</string>

</resources>
