<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="bottom"
    android:orientation="horizontal">
    TopicFactoryopic Nav Item-->
    <TextView
        android:id="@+id/topic_nav_bar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/topic"
        android:background="@drawable/topic_bg"/>
    <!--Progress Nav Item-->
    <TextView
        android:id="@+id/progress_nav_bar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/progress"
        android:background="@drawable/progress_bg"/>
    <!--App Settings-->
    <TextView
        android:id="@+id/app_settings_nav_bar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/app_settings"
        android:background="@drawable/app_settings_bg"/>
    <!--Question Settings-->
    <TextView
        android:id="@+id/question_settings_nav_bar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:text="@string/question_settings"
        android:background="@drawable/question_settings_bg"/>



</LinearLayout>