<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.willm.study.UI.AppSettingsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/app_settings_bg"
        android:gravity="center"
        android:text="@string/app_settings"
        android:fontFamily="serif"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <!--Settings-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/question_settings"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
        <!--Security-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/security_group_and_header">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/security_group_header"
                android:onClick="expandAndHideGroup"
                android:background="@drawable/question_settings_headers"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security"
                    android:textSize="28sp"
                    android:textColor="#000000"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:id="@+id/security_arrow"
                    android:foregroundGravity="center"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/security_group"
                android:orientation="vertical">
                <!--Require Pin-->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/require_pin"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/require_pin"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/require_pin_val"
                        android:layout_gravity="end"
                        android:buttonTint="@color/appSettingsMain"/>
                </FrameLayout>
                <!--Pin-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pin"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pin"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:id="@+id/pin_val"
                            android:buttonTint="@color/appSettingsMain"
                            android:hint="@string/no_passcode"
                            android:inputType="textPassword"/>
                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/edit_passcode"
                            android:onClick="passcodeHandling"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!--TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/beta"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"/-->
    <!--Nav Bar-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:id="@+id/nav_bar">
        <!--Topic Nav Item-->
        <TextView
            android:id="@+id/topic_nav_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/topic"
            android:onClick="goToTopics"
            android:background="@drawable/topic_bg"/>
        <!--Progress Nav Item-->
        <TextView
            android:id="@+id/progress_nav_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/progress"
            android:onClick="goToProgress"
            android:background="@drawable/progress_bg"/>
        <!--App Settings-->
        <TextView
            android:id="@+id/app_settings_nav_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/app_settings"
            android:onClick="goToAppSettings"
            android:background="@drawable/app_settings_bg"/>
        <!--Question Settings-->
        <TextView
            android:id="@+id/question_settings_nav_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/question_settings"
            android:onClick="goToQuestionSettings"
            android:background="@drawable/question_settings_bg"/>
    </LinearLayout>

</FrameLayout>
