<!--Tutorial-->
<FrameLayout
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:elevation="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/tutorial">
        <LinearLayout
            android:layout_width="300dp" android:layout_height="400dp"
            android:id="@+id/home_tutorial"
            android:background="@drawable/tutorial_bg"
            android:backgroundTint="@color/colorPrimary"
            android:orientation="vertical">
            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textSize="32sp"/>
            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/explain"
                android:gravity="center"/>
            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/scroll"/>
            <!--Progress Bar-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_filled"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline"
                    android:paddingLeft="16dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline"
                    android:paddingLeft="16dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline"
                    android:paddingLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/topics_tutorial"
            android:layout_width="300dp" android:layout_height="400dp"
            android:background="@drawable/tutorial_bg"
            android:backgroundTint="@color/topicsMain"
            android:orientation="vertical"
            android:layout_marginLeft="300dp">
            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:text="@string/topic_tutorial_header"
                android:textStyle="bold"
                android:textSize="32sp"/>
            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/explain_topic"
                android:gravity="center"/>
            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/explain_topic_2"/>
            <!--Progress Bar-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline_red" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_filled"
                    android:paddingLeft="16dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline_red"
                    android:paddingLeft="16dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline_red"
                    android:paddingLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
        android:id="@+id/app_settings_tutorial"
        android:layout_marginLeft="600dp"
        android:layout_width="300dp" android:layout_height="400dp"
        android:background="@drawable/tutorial_bg"
        android:backgroundTint="@color/appSettingsMain"
        android:orientation="vertical">
        <TextView
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/app_settings_tutorial_header"
            android:textStyle="bold"
            android:textSize="32sp"/>
        <TextView
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="#FFFFFF"
            android:text="@string/explain_app_settings"
            android:gravity="center"/>
        <TextView
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="#FFFFFF"
            android:text="@string/explain_app_settings_2"/>
        <!--Progress Bar-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/progress_circle_outline_blue" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/progress_circle_outline_blue"
                android:paddingLeft="16dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/progress_circle_filled"
                android:paddingLeft="16dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/progress_circle_outline_blue"
                android:paddingLeft="16dp"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/question_settings_tutorial"
            android:layout_width="300dp" android:layout_height="400dp"
            android:background="@drawable/tutorial_bg"
            android:backgroundTint="@color/questionSettingsMain"
            android:orientation="vertical"
            android:layout_marginLeft="900dp">
            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:text="@string/question_settings_tutorial_header"
                android:textStyle="bold"
                android:textSize="32sp"/>
            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/explain_question_settings"
                android:gravity="center"/>
            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:text="@string/explain_question_settings_2"/>
            <!--Progress Bar-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline_green" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline_green"
                    android:paddingLeft="16dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_outline_green"
                    android:paddingLeft="16dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/progress_circle_filled"
                    android:paddingLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
