<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="400dp"
    android:background="@drawable/tutorial_bg"
    android:backgroundTint="@color/topicsMain"
    android:orientation="vertical">
    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:text="@string/topic_tutorial_header"
        android:textStyle="bold"
        android:textSize="32sp"/>
    <TextView
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="#FFFFFF"
        android:text="@string/explain_topic"
        android:gravity="center"/>
    <TextView
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="#FFFFFF"
        android:text="@string/explain_topic_2"/>
    <!--Progress Bar-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/progress_circle_outline_red" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/progress_circle_filled"
            android:paddingLeft="16dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/progress_circle_outline_red"
            android:paddingLeft="16dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/progress_circle_outline_red"
            android:paddingLeft="16dp"/>
    </LinearLayout>
</LinearLayout>